Convert a Path to a PathSourcePath
Summary:
Rules typically shouldn't have any Path references and should instead
only refer to SourcePaths.

Reviewed By: ttsugriy

fbshipit-source-id: 311416c